# create-claude-app

./: CLAUDE.md  LICENSE  MANIFEST.in  PRD.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/create_claude_app/: __init__.py  cli.py  file_operations.py  generators.py  prompts.py  validators.py
src/create_claude_app/templates/: README.md
tests/: __init__.py  test_cli.py  test_file_operations.py  test_generators.py  test_integration.py  test_integration_docker_fixes.py  test_prompts.py  test_validators.py
